@@ -12,6 +12,7 @@ release_tests = 1
 test2_v0      = 1
 github_user   = uperl
 
+workflow = static
 workflow = linux
 workflow = macos
 workflow = windows
