@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 
 use strict;
-use warnings; 
+use warnings;
 use String::Template qw(expand_hash);
 use Data::Dumper;
 
