@@ -1,0 +1,58 @@
+severity = 1
+only = 1
+
+[Community::ArrayAssignAref]
+[Community::BarewordFilehandles]
+[Community::ConditionalDeclarations]
+[Community::ConditionalImplicitReturn]
+[Community::DeprecatedFeatures]
+[Community::DiscouragedModules]
+[Community::DollarAB]
+[Community::Each]
+[Community::IndirectObjectNotation]
+[Community::LexicalForeachIterator]
+[Community::LoopOnHash]
+[Community::ModPerl]
+[Community::OpenArgs]
+[Community::OverloadOptions]
+[Community::POSIXImports]
+[Community::PackageMatchesFilename]
+[Community::PreferredAlternatives]
+[Community::StrictWarnings]
+extra_importers = Test2::V0
+[Community::Threads]
+[Community::Wantarray]
+[Community::WarningsSwitch]
+[Community::WhileDiamondDefaultAssignment]
+
+[BuiltinFunctions::ProhibitBooleanGrep]
+;[BuiltinFunctions::ProhibitStringyEval]
+[BuiltinFunctions::ProhibitStringySplit]
+[BuiltinFunctions::ProhibitVoidGrep]
+[BuiltinFunctions::ProhibitVoidMap]
+[ClassHierarchies::ProhibitExplicitISA]
+[ClassHierarchies::ProhibitOneArgBless]
+[CodeLayout::ProhibitHardTabs]
+allow_leading_tabs = 0
+[CodeLayout::ProhibitTrailingWhitespace]
+[CodeLayout::RequireConsistentNewlines]
+[ControlStructures::ProhibitLabelsWithSpecialBlockNames]
+[ControlStructures::ProhibitMutatingListFunctions]
+[ControlStructures::ProhibitUnreachableCode]
+[InputOutput::ProhibitBarewordFileHandles]
+[InputOutput::ProhibitJoinedReadline]
+[InputOutput::ProhibitTwoArgOpen]
+[Miscellanea::ProhibitFormats]
+[Miscellanea::ProhibitUselessNoCritic]
+[Modules::ProhibitConditionalUseStatements]
+;[Modules::RequireEndWithOne]
+[Modules::RequireNoMatchVarsWithUseEnglish]
+[Objects::ProhibitIndirectSyntax]
+[RegularExpressions::ProhibitUselessTopic]
+[Subroutines::ProhibitNestedSubs]
+[ValuesAndExpressions::ProhibitLeadingZeros]
+[ValuesAndExpressions::ProhibitMixedBooleanOperators]
+[ValuesAndExpressions::ProhibitSpecialLiteralHeredocTerminator]
+[ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
+[Variables::ProhibitPerl4PackageNames]
+[Variables::ProhibitUnusedVariables]
